rounding decimal digits in invoices table and adding files to configure mock server

--- a/webapp/view/InvoiceList.view.xml
+++ b/webapp/view/InvoiceList.view.xml
@@ -44,7 +44,7 @@
                 <firstStatus>
                     <ObjectStatus id="Status_text" text="{
                         path: 'invoice>Status',
-                        formatter: '.formatter.statusText'
+                        formatter: '.statusText'
                     }"/>
                 </firstStatus>
             </ObjectListItem>
